fix dora size not being right on mobile

--- a/src/tags/tile/styles.sass
+++ b/src/tags/tile/styles.sass
@@ -11,6 +11,10 @@
   background-size: contain
   box-shadow: 5px #ccc
 
+  &--back
+    background: url('../../images/tiles/Back.png') no-repeat
+    background-size: contain
+
   &__img
     height: 60px
 
